# tiny-math-lang

./: .gitignore  Cargo.toml  README.MD  makefile
repl/: Cargo.toml
repl/src/: main.rs
tml/: Cargo.toml
tml/src/: highlighter.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
website/: package.json  pnpm-lock.yaml  rollup.config.js
website/src/: App.svelte  Editor.svelte  EditorView.svelte  Highlighter.svelte  Home.svelte  LineExec.svelte  Load.svelte  Loading.svelte  constant.js  global.css  gutter.js  key.js  main.js  multineEditor.js  offset.js  selection.js  utils.js  wasm.js
website/src/editor/: Editor.svelte  Loading.svelte  constant.js  gutter.js  selection.js
website/src/home/: Home.svelte  LineExec.svelte
website/static/: index.html
