[package]
name = "tml"
version = "0.1.0"
authors = ["Virgiel"]
edition = "2021"

[dependencies]
rustyline = { version = "9.0.0", optional = true }
rustyline-derive = { version = "0.5.0", optional = true }

[features]
build-binary = ["rustyline", "rustyline-derive"]

[dev-dependencies]
proptest = "1.0.0"

[[bin]]
name = "tml"
required-features = ["build-binary"]

[profile.release]
lto = true
